--- a/sample/res/values/themes.xml
+++ b/sample/res/values/themes.xml
@@ -5,11 +5,23 @@
         <item name="actionBarStyle">@style/Widget.ActionBar</item>
     </style>
 
-    <style name="AppTheme.TranslucentActionBar" parent="Theme.Sherlock.Light.DarkActionBar">
+    <style name="AppTheme.Light" parent="Theme.Sherlock.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/Widget.Light.ActionBar</item>
+        <item name="actionBarStyle">@style/Widget.Light.ActionBar</item>
+    </style>
+    
+    <style name="AppTheme.TranslucentActionBar">
         <item name="android:actionBarStyle">@style/Widget.ActionBar.Transparent</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.ActionBar.Transparent</item>
         <item name="windowActionBarOverlay">true</item>
     </style>
-
+    
+    <style name="AppTheme.Light.TranslucentActionBar">
+        <item name="android:actionBarStyle">@style/Widget.Light.ActionBar.Transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="actionBarStyle">@style/Widget.Light.ActionBar.Transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+    </style>
+    
 </resources>
