--- a/sample/res/layout/activity_scrollview.xml
+++ b/sample/res/layout/activity_scrollview.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.cyrilmottier.android.translucentactionbar.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fab__scroll_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/fab__container"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:padding="15dp"
+        android:text="@string/loren_ipsum"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="@string/loren_ipsum"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/loren_ipsum"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="@string/loren_ipsum"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
-    </LinearLayout>
-
-</com.cyrilmottier.android.translucentactionbar.NotifyingScrollView>
+</LinearLayout>
