--- a/sample/res/layout/activity_scrollview.xml
+++ b/sample/res/layout/activity_scrollview.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cyrilmottier.android.translucentactionbar.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroller"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
-    <TextView
+    android:layout_height="match_parent" 
+    android:fillViewport="true">
+    
+    <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="@string/loren_ipsum"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="@string/loren_ipsum"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
-
-</LinearLayout>
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical">
+    	
+	    <TextView
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:padding="15dp"
+	        android:text="@string/loren_ipsum"
+	        android:textAppearance="@android:style/TextAppearance.Medium" />
+	
+	    <TextView
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:padding="15dp"
+	        android:text="@string/loren_ipsum"
+	        android:textAppearance="@android:style/TextAppearance.Medium" />
+	
+	</LinearLayout>
+	
+</com.cyrilmottier.android.translucentactionbar.NotifyingScrollView>
