--- a/sample/res/layout/drawer_list_item.xml
+++ b/sample/res/layout/drawer_list_item.xml
@@ -7,5 +7,6 @@
           android:paddingLeft="16dp"
           android:paddingRight="16dp"
           android:textColor="#fff"
+          android:fontFamily="sans-serif-light"
           android:background="@drawable/activated_background_indicator"
           android:minHeight="48dp"/>
