--- a/samples/actionbarcompat/res/values/themes.xml
+++ b/samples/actionbarcompat/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.ActionBar.Transparent</item>
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
     
     <style name="AppTheme.Light.TranslucentActionBar" parent="Theme.AppCompat.Light">
@@ -17,6 +18,7 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.Light.ActionBar.Transparent</item>
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
     
 </resources>
