--- a/samples/actionbarsherlock/res/values/themes.xml
+++ b/samples/actionbarsherlock/res/values/themes.xml
@@ -10,6 +10,8 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.ActionBar.Transparent</item>
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowContentOverlay">@null</item>
     </style>
     
     <style name="AppTheme.Light.TranslucentActionBar" parent="Theme.Sherlock.Light">
@@ -17,6 +19,8 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.Light.ActionBar.Transparent</item>
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowContentOverlay">@null</item>
     </style>
-    
+
 </resources>
