--- a/samples/stock/res/values/themes.xml
+++ b/samples/stock/res/values/themes.xml
@@ -7,11 +7,13 @@
     <style name="AppTheme.TranslucentActionBar">
         <item name="android:actionBarStyle">@style/Widget.ActionBar.Transparent</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
-    
+
     <style name="AppTheme.Light.TranslucentActionBar" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/Widget.Light.ActionBar.Transparent</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
     
 </resources>
