Override ActionBar alpha on NavigationDrawer slide

--- a/samples/stock/res/layout/activity_navigation_drawer.xml
+++ b/samples/stock/res/layout/activity_navigation_drawer.xml
@@ -18,14 +18,21 @@
          The drawer is given a fixed width in dp and extends the full height of
          the container. A solid background is used for contrast
          with the content view. -->
-    <ListView
+    <LinearLayout
         android:id="@+id/left_drawer"
         android:paddingTop="?android:attr/actionBarSize"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:layout_gravity="start">
+
+        <ListView
+            android:id="@+id/left_drawer_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:background="#111"/>
+
+    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
